# VTA-PROJECT-TEST

./: .gitignore  README.md
VTA-BE-main_copy/: .gitignore  README.md  add_pitch_to_vista.py  db.sqlite3  fix_json_quotes.py  fix_json_quotes_smart.py  manage.py  pyproject.toml  requirements.txt  tokens.py  training_data_pitch.json  verce.json  vista_pitch_block.json  vista_pitch_block_fixed.json  vta.pem
VTA-BE-main_copy/QA_VTA/: contextfinder.py  helper.py  qa_vta.py
VTA-BE-main_copy/QA_VTA/utils/: bucket_handler.py  ct.py  indexify.py  pdfConverter.py  test_vta.py  trainer.py
VTA-BE-main_copy/VTA_Backend/: asgi.py  settings.py  urls.py  wsgi.py
VTA-BE-main_copy/api/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
VTA-BE-main_copy/api/migrations/: 0001_initial.py  0002_initial.py  0003_alter_rating_vtatext_alter_rating_usertext.py  0004_likeresponse_rename_rating_dislikeresponse.py  0005_feedback.py
VTA-BE-main_copy/vta_qa_model/training/: faqs.json  json_to_markdown.py  squad_dataset.py  train-data.json  vta_trainer.py  vta_validator.py
VTA-BE-main_copy/vta_qa_model/training/newdataset/: aug.json  example.json  mix.json  template.json  vista.json  vista.md
VTA-BE-main_copy/vta_qa_model/validation/: empty.json  invalid_qa_pairs.json  mix.json  mixup.json  valid_qa_pairs.json  validator_v2.py  verify_f1_score.py
VTA-FE-main_copy/: constants.ts  convert_to_json.py  package-lock.json  package.json  training_data_pitch.txt
VTA-FE-main_copy/app/: globals.css  layout.tsx  page.tsx
VTA-FE-main_copy/app/Context/: ChatContext.tsx
(+14 files in other folders)
