[tool.poetry]
name = "vta-backend"
version = "0.1.0"
description = ""
authors = ["kpodjison <jeevista@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
